	* Fixed bug #13885: XSS in indexed search BE module (thanks to Benjamin Mack)
	* Fixed bug #15254: Extension Manager allows to edit arbitrary files if noEdit flag is not set (thanks to Helmut Hummel)
	* Fixed bug #14389: phtml is also PHP extension and should be denied editing / uploading via fileadmin (thanks to Ernesto Baschny)
	* Fixed bug #1985: XSS vulnerability in wizard classes

2010-05-17  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)
	* Fixed bug #11621: XSS vulnerabilities in workspace module (thanks to Georg Ringer)
	* Fixed bug #11620: XSS vulnerability in task center module (thanks to Georg Ringer)
	* Fixed bug #12628: XSS in sysext sys_action (thanks to Georg Ringer)
	* Fixed bug #12634: XSS in the access module (thanks to Georg Ringer)
	* Fixed bug #13558: XSS in t3lib_querygenerator (thanks to Georg Ringer)
	* Fixed bug #12630: XSS in filelist module

2010-04-09  Michael Stucki  <michael@typo3.org>

	* Fixed bug #13959: Security precaution for extensions which use their own autoloader. Note: This is the same fix which has been committed to TYPO3 4.3 where it is marked as a security fix. However, versions prior to TYPO3 4.3 do not ship with an autoloader, so they are not affected by this problem unless an extension provides its own autoloader.

2010-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13470: Session/Login not working in IE8 across subdomains 

2009-11-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12467: TYPO3 Inline User Manual is broken

2009-11-17  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11937: Do not show PHP 5.3 E_DEPRECATED messages on productive systems

2009-11-09  Stanislas Rolland  <typo3@sjbr.ca>
