@@ -16,6 +16,7 @@
 	* Fixed bug #15254: Extension Manager allows to edit arbitrary files if noEdit flag is not set (thanks to Helmut Hummel)
 	* Fixed bug #14389: phtml is also PHP extension and should be denied editing / uploading via fileadmin (thanks to Ernesto Baschny)
 	* Fixed bug #1985: XSS vulnerability in wizard classes
+	* Fixed bug #14712: The GET/POST variable mimeType is used to create the http header content-type without verification (thanks to Rupert Germann)
 
 2010-05-17  Oliver Hader  <oliver@typo3.org>
 
